Fix quick add selectbox gets scrollbar

--- a/pixelegg/css/pixelegg.css
+++ b/pixelegg/css/pixelegg.css
@@ -5523,6 +5523,9 @@ span.overlayContainer img.overlay {
 #egw_fw_topmenu_info_items #topmenu_info_quick_add #quick_add_selectbox::part(form-control) {
   margin-left: -3em;
 }
+#egw_fw_topmenu_info_items #topmenu_info_quick_add #quick_add_selectbox::part(menu) {
+  max-height: 60vh;
+}
 #egw_fw_topmenu_info_items img#topmenu_info_error {
   width: 16px;
   height: 16px;
