--- a/pixelegg/less/layout_raster_buttons.less
+++ b/pixelegg/less/layout_raster_buttons.less
@@ -293,6 +293,9 @@
 		#quick_add_selectbox::part(form-control) {
 			margin-left: -3em;
 		}
+		#quick_add_selectbox::part(menu) {
+			max-height: 60vh;
+		}
     }
 
     // ##############################################################################
